--- a/style.css
+++ b/style.css
@@ -160,8 +160,8 @@ img {
   align-items: center;
   width: 100%;
   height: 100vh;
-  background: rgb(0, 0, 0);
-  /* background: linear-gradient(90deg, rgba(79,103,164,1) 0%, rgba(0,173,162,1) 30%, rgba(79,103,164,1) 100%); */
+  background: rgb(79,103,164);
+  background: linear-gradient(90deg, rgba(79,103,164,1) 0%, rgba(0,173,162,1) 30%, rgba(79,103,164,1) 100%);
 }
 
 .welcome-section > p {
