--- a/style.css
+++ b/style.css
@@ -191,6 +191,20 @@ img {
 
 }
 
+/* About Me Section */
+
+.about-me {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 80vh;
+  padding: 0 2rem;
+  background: var(--main-gray);
+}
+
 /* Projects section */
 
 .projects-section {
