--- a/style.css
+++ b/style.css
@@ -144,11 +144,13 @@ img {
   display: block;
   font-size: 2.2rem;
   padding: 2rem;
+  text-shadow: 1px 1px ;
 }
 
 .nav-list a:hover {
-  /* background: linear-gradient(90deg, rgba(0,23,133,1) 0%, rgba(15,121,9,1) 51%, rgba(0,23,133,1) 100%); */
-  background: linear-gradient(90deg, rgba(15,121,9,1) 0%, rgba(255,255,255,255) 51%, rgba(15,121,9,1) 100%);
+  transform:scaleY(1.5);
+  transform: translateX(-8px);
+  background-color: rgb(0, 0, 0);
 }
 
 /* Welcome section */
@@ -309,7 +311,7 @@ img {
   width: 100%;
   height: 90vh;
   padding: 0 2rem;
-  background: var(--main-gray);
+  background-color: rgb(1, 63, 63);
 }
 
 .contact-section-header > h2 {
@@ -337,12 +339,15 @@ img {
 
 .contact-details {
   font-size: 2.4rem;
-  text-shadow: 2px 2px 1px #1f1f1f;
+  text-shadow: 2px 2px 1px #193652;
   transition: transform 0.3s ease-out;
 }
 
 .contact-details:hover {
-  transform: translateY(8px);
+  transform:scaleY(1.5);
+  transform: translateX(-8px);
+  background-color: rgb(6, 190, 104);
+  border-radius: 50%;
 }
 
 /* Footer */
