--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ a {
 }
 
 a:hover {
-  color: #009e42;
+  color: #3da7f8;
 }
 
 
@@ -134,7 +134,7 @@ a:hover {
   display: block;
   font-size: 2.2rem;
   padding: 1rem;
-  text-shadow: 1px 1px #077523;
+  /* text-shadow: 1px 1px #077523; */
 }
 
 /* .nav-list a:hover {
@@ -198,7 +198,7 @@ a:hover {
   align-items: center;
   width: 100%;
   height: 100vh;
-  background: #fff;
+  background: #917bd2;
 }
 
 .welcome-section > p {
@@ -354,7 +354,7 @@ a:hover {
 .projects-section {
   text-align: center;
   padding: 31rem 2rem;
-  background-color: #fff;
+  background-color: #3aa3c0;
 }
 
 .projects-section-header {
@@ -426,7 +426,7 @@ a:hover {
 .btn-show-all {
   font-size: 2rem;
   background: #ff7f50;
-  transition: background 0.3s ease-out;
+  /* transition: background 0.3s ease-out; */
 }
 
 .btn-show-all:hover {
@@ -454,7 +454,7 @@ a:hover {
   width: 100%;
   height: 90vh;
   padding: 0 2rem;
-  background-color: #fff;
+  background-color: #b5a7f9;
 }
 
 .contact-section-header > h2 {
@@ -500,7 +500,7 @@ footer {
   justify-content: space-evenly;
   border-top: 1px solid rgb(0, 233, 133, 1);
   background-size: 100% 20px;
-  background-color: #2988a5;
+  background-color: #4e4e4e;
 }
 
 footer > p {
